Ajustando links de whatsapp e envio de email

--- a/about-us.html
+++ b/about-us.html
@@ -135,7 +135,7 @@
 								</a> -->
 
 								<!-- whatsapp icon -->
-								<a href="https://www.facebook.com/mauricio.macdowell.16"
+								<a href="https://wa.me/5585988197244?text=Ol%C3%A1%21++Visitei+o+seu+site+e+fiquei+bastante+interessado+nas+suas+ofertas+imobili%C3%A1rias.+Gostaria+de+obter+mais+informa%C3%A7%C3%B5es+detalhadas+sobre+as+propriedades+dispon%C3%ADveis+e+conhecer+melhor+como+voc%C3%AAs+podem+me+auxiliar+no+processo+de+encontrar+a+minha+pr%C3%B3xima+casa+ou+investimento+imobili%C3%A1rio.++Agrade%C3%A7o+antecipadamente+pela+sua+aten%C3%A7%C3%A3o+e+estou+ansioso+para+a+sua+resposta."
 									class="btn btn-light social my-2 mx-1 p-2 rounded-circle"
 									>
 									<span class="d-flex justify-content-center align-items-center">
