--- a/services.html
+++ b/services.html
@@ -131,10 +131,10 @@
 			<div class="row justify-content-between align-items-center">
 				<div class="col-12 col-lg-6" data-aos="zoom-in" data-aos-duration="3000">
 					<h2 class="fw-bolder text-info">
-						Oportunidades de imoveis
+						Oportunidades de imóveis
 					</h2>
 					<p>
-						Disponibilização de imoves já disponiveis e dispostos a negocia para obter para o cliente.
+						Imóveis disponíveis de acordo com a sua necessidade.
 					</p>
 					<p>
 						Vastas oportunidades no mercado de imóveis. Focada em disponibilizar imóveis prontos para negociação, a empresa atua com eficiência e agilidade para garantir que seus clientes tenham acesso às melhores opções disponíveis. Com consultor experiente e especializada, a <b>forte galpões</b> se destaca por sua capacidade de identificar oportunidades que atendam perfeitamente às necessidades e objetivos de cada cliente. Comprometida com a transparência e a excelência no atendimento, a empresa garante um processo de negociação fluido e vantajoso, priorizando sempre os interesses e a satisfação de seus clientes.
@@ -197,7 +197,7 @@
 						<a href="./services.html" class="text-decoration-none text-gray small">Consultoria imobiliária</a>
 					</div>
 					<div>
-						<a href="./services.html" class="text-decoration-none text-gray small">Oportunidades de imoveis</a>
+						<a href="./services.html" class="text-decoration-none text-gray small">Oportunidades de imóveis</a>
 					</div>
 					<!-- <div>
 						<a href="./services.html" class="text-decoration-none text-gray small">Análise e documentação</a>
