--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 				<div class="col-12 col-lg-5 position-relative px-4 py-5 p-lg-0 " data-aos="zoom-in" data-aos-duration="3000">
 					<div class="d-flex pt-8">
-						<audio class="mx-auto" controls autoplay>
+						<audio class="mx-auto" id="myAudio" controls="true" autoplay="true" loop="true">
 							<source src="./assets/media/Chris_Rea_DRIVING_HOME_FOR_CHRISTMAS.mp3" type="audio/mp3">
 							Seu navegador não suporta o elemento de áudio.
 						</audio>
@@ -213,7 +213,7 @@
 								</a> -->
 
 								<!-- whatsapp icon -->
-								<a href="https://www.facebook.com/mauricio.macdowell.16"
+								<a href="https://wa.me/5585988197244?text=Ol%C3%A1%21++Visitei+o+seu+site+e+fiquei+bastante+interessado+nas+suas+ofertas+imobili%C3%A1rias.+Gostaria+de+obter+mais+informa%C3%A7%C3%B5es+detalhadas+sobre+as+propriedades+dispon%C3%ADveis+e+conhecer+melhor+como+voc%C3%AAs+podem+me+auxiliar+no+processo+de+encontrar+a+minha+pr%C3%B3xima+casa+ou+investimento+imobili%C3%A1rio.++Agrade%C3%A7o+antecipadamente+pela+sua+aten%C3%A7%C3%A3o+e+estou+ansioso+para+a+sua+resposta."
 									class="btn btn-info social my-2 mx-1 p-2 rounded-circle"
 									>
 									<span class="d-flex justify-content-center align-items-center">
