Ajuste google analytics

--- a/services.html
+++ b/services.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16708186660">
+	</script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'AW-16708186660');
+	</script>
+	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -339,7 +350,6 @@
 			</svg>
 			</i>
 	</button>
-
 
 	<script src="./assets/library/bootstrap/js/bootstrap.bundle.min.js"></script>
 	<script src="./assets/library/aos/aos.js"></script>
