--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16708186660">
+	</script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'AW-16708186660');
+	</script>
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
@@ -14,8 +25,6 @@
 	<link rel="stylesheet" type="text/css" href="./assets/library/aos/aos.css">
 	<link rel="stylesheet" type="text/css" href="./assets/css/main.min.css">
 	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-
-
 
 </head>
 <body>
@@ -615,7 +624,6 @@
 			</svg>
 			</i>
 	</button>
-
 
 	<!-- Bootstrap JavaScript: Bundle with Popper -->
 	<script src="./assets/library/bootstrap/js/bootstrap.bundle.min.js"></script>
